# qemu-ath9k

./: CHEATSHEET.md  Makefile  README.md
scripts/: integrate.sh
src/: Kconfig  ath9k_dma.h  ath9k_eeprom.h  ath9k_medium_hub.c  ath9k_medium_hub_scalable.c  ath9k_pci.c  ath9k_regs.h  meson.build  vwifi_ath9k_pci.c
tests/: test_probe.sh
tools/: build_debian_qcow2.py  wifi-1.recipe.json
